# adventofcode

./: README.md  project.clj
2015/: README.md  project.clj
2015/resources/: inputs.clj
2016/: README.md  aoc.py  assembunny.py  day00.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  puzzle_data.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  (+15 more)
2017/: README.md
2017/aoc2017/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md
2017/aoc2017/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
2017/aoc2017/source/: day01.cpp  day01.hpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day04.hpp  day05.cpp  day05.hpp  day06.cpp  day06.hpp  day07.cpp  day07.hpp  day08.cpp  day08.hpp  day09.cpp  day09.hpp  day10.cpp  day10.hpp  day11.cpp  day11.hpp  day12.cpp  day12.hpp  day13.cpp  day13.hpp  day14.cpp  day14.hpp  day15.cpp  day15.hpp  day16.cpp  day16.hpp  day17.cpp  day17.hpp  day18.cpp  day18.hpp  day19.cpp  day19.hpp  day20.cpp  day20.hpp  (+23 more)
2017/aoc2017/test/: CMakeLists.txt
2017/aoc2017/test/source/: day01_test.cpp  day02_test.cpp  day03_test.cpp  day04_test.cpp  day05_test.cpp  day06_test.cpp  day07_test.cpp  day08_test.cpp  day09_test.cpp  day10_test.cpp  day11_test.cpp  day12_test.cpp  day13_test.cpp  day14_test.cpp  day15_test.cpp  day16_test.cpp  day17_test.cpp  day18_test.cpp  day19_test.cpp  day20_test.cpp  day21_test.cpp  day22_test.cpp  day23_test.cpp  day24_test.cpp  day25_test.cpp  parser_test.cpp  puzzle_data_test.cpp  puzzle_test.cpp
2022/: README.md
2022/aoc2022/: build.gradle.kts
2023/: .gitignore  README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  puzzle.py  requirements.txt  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  (+15 more)
doc/: intro.md
resources/: inputs.clj
src/adventofcode/: core.clj  day01.clj  day05.clj  day06.clj  day10.clj  day14.clj  day15.clj  day16.clj  day17.clj  day21.clj  day22.clj  day23.clj  day25.clj
test/adventofcode/: day01_test.clj  day03_test.clj  day08_test.clj  (+9 more)
(+87 files in other folders)
